# video-studio

./: .env.example  .gitignore  .npmrc  CHANGELOG.md  DESIGN.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.github/workflows/: ci.yml  release-build.yml  release-please.yml
agent/: esbuild.config.mjs  package.json
agent/prompts/: saas-style-guide.md  system.md
agent/scripts/: embed-prompt.mjs
agent/src/: claude.ts  index.ts
docs/: ARCHITECTURE.md  SETUP.md
electron/: agent-bridge.ts  app-menu.ts  auto-update.ts  config.ts  main.ts  preload.ts  projects.ts  session-store.ts  system-checks.ts  thread-store.ts  tsconfig.json  types.ts
scripts/: build-icon.mjs  dev-electron.mjs  finalize-electron-build.mjs  migrate-design-tokens-pass2.mjs  migrate-design-tokens-pass3.mjs  migrate-design-tokens.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  projects.rs  sidecar.rs
src/lib/: activity-verbs.ts  agent-client.ts  agent-state.ts  exclusive-audio.ts  media-url.ts  preview-context.tsx  scene-state.ts  types.ts  use-workbench-session.ts
src/routes/: ErrorBoundary.tsx  Home.tsx  Onboarding.tsx  Playground.tsx  Projects.tsx  Settings.tsx  Stage.tsx  Workbench.tsx
studio/: package.json  remotion.config.ts  tsconfig.json
studio/src/: Root.tsx  (+2 more)
(+74 files in other folders)
